--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,34 @@
 <resources>
-    <dimen name="fab_margin">16dp</dimen>
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin_2x">32dp</dimen>
+    <dimen name="activity_horizontal_margin_2x">36dp</dimen>
+
+    <!-- MATERIAL TEXT SIZES https://material.io/design/typography/the-type-system.html# -->
+    <dimen name="text_size_line_space_extra_normal">8sp</dimen>
+    <dimen name="text_size_oveline">10sp</dimen>
+    <dimen name="text_size_caption">12sp</dimen>
+    <dimen name="text_size_button">14sp</dimen>
+    <dimen name="text_size_body_2">14sp</dimen>
+    <dimen name="text_size_body_1">16sp</dimen>
+    <dimen name="text_size_subtitle_2">14sp</dimen>
+    <dimen name="text_size_subtitle_1">16sp</dimen>
+    <dimen name="text_size_h6">20sp</dimen>
+    <dimen name="text_size_h5">24sp</dimen>
+    <dimen name="text_size_h4">34sp</dimen>
+    <dimen name="text_size_h3">48sp</dimen>
+    <dimen name="text_size_h2">60sp</dimen>
+    <dimen name="text_size_h1">96sp</dimen>
+
+    <dimen name="material_btn_padding_bottom">4dp</dimen>
+    <dimen name="material_btn_padding_left">16dp</dimen>
+    <dimen name="material_btn_padding_right">16dp</dimen>
+    <dimen name="material_btn_padding_top">4dp</dimen>
+
+    <dimen name="min_tappable_size">32dp</dimen>
+    <dimen name="recomended_tappeable_size">48dp</dimen>
+    <dimen name="default_icon_dimen">24dp</dimen>
+    <dimen name="icon_dimen_big">28dp</dimen>
+    <dimen name="default_margin">10dp</dimen>
 </resources>
