--- a/app/src/main/res/layout/view_status.xml
+++ b/app/src/main/res/layout/view_status.xml
@@ -11,6 +11,7 @@
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/title"
             style="@style/Title"
+            android:textAppearance="?attr/textAppearanceHeadline6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
@@ -19,6 +20,7 @@
             style="@style/Subtitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textAppearance="?attr/textAppearanceBody2"
             android:layout_marginTop="20dp"
             android:textAlignment="center" />
 
