--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,19 +7,37 @@
 
     <fragment
         android:id="@+id/WelcomeFragment"
-        android:name="com.robertomiranda.app.WelcomeFragment"
+        android:name="com.robertomiranda.app.features.welcome.WelcomeFragment"
         tools:layout="@layout/fragment_welcome">
 
         <action
             android:id="@+id/action_WelcomeFragment_to_PostListFragment"
             app:destination="@id/PostListFragment"
             app:popUpTo="@+id/nav_graph"
-            app:popUpToInclusive="true"/>
+            app:popUpToInclusive="true" />
     </fragment>
+
     <fragment
         android:id="@+id/PostListFragment"
-        android:name="com.robertomiranda.app.PostListFragment"
+        android:name="com.robertomiranda.app.features.postlist.PostListFragment"
         android:label="@string/post_list_title"
         tools:layout="@layout/fragment_post_list">
+
+        <action
+            android:id="@+id/action_PostListFragment_to_PostDetailFragment"
+            app:destination="@id/PostDetailFragment" />
     </fragment>
+
+    <fragment
+        android:id="@+id/PostDetailFragment"
+        android:name="com.robertomiranda.app.features.postdetail.PostDetailFragment"
+        android:label="@string/post_detail_title"
+        tools:layout="@layout/fragment_post_detail">
+
+        <argument
+            android:name="postId"
+            android:defaultValue="-1"
+            app:argType="integer" />
+    </fragment>
+
 </navigation>
