--- a/app/src/main/res/layout/fragment_post_detail.xml
+++ b/app/src/main/res/layout/fragment_post_detail.xml
@@ -47,13 +47,11 @@
                 app:layout_constraintTop_toBottomOf="@id/toolbar">
 
                 <com.google.android.material.tabs.TabItem
-                    android:id="@+id/detail"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/post_detail_tab_details" />
 
                 <com.google.android.material.tabs.TabItem
-                    android:id="@+id/comment"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/post_detail_tab_comments" />
@@ -82,11 +80,21 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/appbar" />
 
+        <com.robertomiranda.app.components.PostDetailView
+            android:id="@+id/detail"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:visibility="@{vm.screenState == PostDetailScreenState.DATA_LOADED ? View.VISIBLE: View.GONE }"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/appbar" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/list"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:visibility="@{vm.screenState == PostDetailScreenState.DATA_LOADED ? View.VISIBLE: View.GONE }"
+            android:visibility="gone"
             app:items="@{vm.postCommentsData}"
             app:layoutManager="com.robertomiranda.app.core.LinearLayoutManagerWrapper"
             app:layout_constraintBottom_toBottomOf="parent"
