--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -30,5 +30,6 @@
     <dimen name="recomended_tappeable_size">48dp</dimen>
     <dimen name="default_icon_dimen">24dp</dimen>
     <dimen name="icon_dimen_big">28dp</dimen>
+    <dimen name="icon_dimen_x">48dp</dimen>
     <dimen name="default_margin">10dp</dimen>
 </resources>
