--- a/app/src/main/res/layout/fragment_post_detail.xml
+++ b/app/src/main/res/layout/fragment_post_detail.xml
@@ -96,7 +96,7 @@
             android:layout_height="0dp"
             android:visibility="gone"
             app:items="@{vm.postCommentsData}"
-            app:layoutManager="com.robertomiranda.app.core.LinearLayoutManagerWrapper"
+            app:layoutManager="com.robertomiranda.app.core.ui.LinearLayoutManagerWrapper"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
