--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -42,6 +42,10 @@
         <item name="android:textColor">?android:attr/textColorPrimary</item>
     </style>
 
+    <style name="Body.Big">
+        <item name="android:textAppearance">?attr/textAppearanceHeadline6</item>
+    </style>
+
     <style name="Body.Secondary">
         <item name="android:textAppearance">?attr/textAppearanceSubtitle1</item>
         <item name="android:textColor">?android:attr/textColorSecondary</item>
