--- a/app/src/main/res/layout/row_comment.xml
+++ b/app/src/main/res/layout/row_comment.xml
@@ -27,6 +27,13 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp" />
 
+        <androidx.emoji.widget.EmojiTextView
+            android:id="@+id/emoji"
+            style="@style/Body.Secondary"
+            android:layout_marginTop="8dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
         <View
             style="@style/Line"
             android:layout_width="match_parent"
