Update dimens and set ReadMe

--- a/app/src/main/res/layout/row_comment.xml
+++ b/app/src/main/res/layout/row_comment.xml
@@ -24,7 +24,7 @@
             style="@style/Body.Secondary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="@dimen/default_margin"
             android:visibility="gone"
             app:layout_constraintStart_toEndOf="@id/email"
             app:layout_constraintTop_toTopOf="@id/email"
@@ -36,7 +36,7 @@
             style="@style/Body"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="@dimen/default_margin"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/email"
             tools:text="Long title" />
@@ -46,7 +46,7 @@
             style="@style/Body.Secondary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="@dimen/default_margin"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/title"
             tools:text="A very Long comment here" />
@@ -55,8 +55,8 @@
             style="@style/Line"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginTop="@dimen/default_margin"
+            android:layout_marginBottom="@dimen/default_margin"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/body" />
 
