--- a/app/src/main/res/layout/row_comment_count.xml
+++ b/app/src/main/res/layout/row_comment_count.xml
@@ -18,8 +18,8 @@
             style="@style/Line"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp" />
+            android:layout_marginTop="@dimen/default_margin"
+            android:layout_marginBottom="@dimen/default_margin" />
 
     </LinearLayout>
 </layout>
