--- a/app/src/main/res/layout/row_post.xml
+++ b/app/src/main/res/layout/row_post.xml
@@ -5,7 +5,7 @@
         android:id="@+id/card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
+        android:layout_margin="@dimen/default_margin"
         android:checkable="true"
         android:clickable="true"
         android:focusable="true">
@@ -14,7 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="16dp">
+            android:padding="@dimen/activity_horizontal_margin">
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/title"
@@ -26,7 +26,7 @@
                 android:id="@+id/body"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="@dimen/default_margin"
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:singleLine="true"
