--- a/app/src/main/res/layout/view_post_detail.xml
+++ b/app/src/main/res/layout/view_post_detail.xml
@@ -22,8 +22,8 @@
             style="@style/Line"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginTop="@dimen/default_margin"
+            android:layout_marginBottom="@dimen/default_margin"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/userrow" />
