--- a/app/src/main/res/layout/view_status.xml
+++ b/app/src/main/res/layout/view_status.xml
@@ -19,7 +19,7 @@
             style="@style/Subtitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="@dimen/default_margin_x"
             android:textAlignment="center" />
 
 
